WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40531
-webkit-column-break-* properties don’t do anything
https://bugs.webkit.org/show_bug.cgi?id=40531
Summary
-webkit-column-break-* properties don’t do anything
mitz
Reported
2010-06-12 12:53:23 PDT
<
rdar://problem/7882140
> Patch forthcoming.
Attachments
Check for -webkit-column-break-* in column layout
(6.23 KB, patch)
2010-06-12 12:57 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-06-12 12:57:35 PDT
Created
attachment 58564
[details]
Check for -webkit-column-break-* in column layout I know that Hyatt is working on a new architecture for pagination and columns, and intends to support the unified page/column break-* properties, but this is a very simple patch that enables properties that WebKit has had all along.
Dave Hyatt
Comment 2
2010-06-12 12:59:37 PDT
Comment on
attachment 58564
[details]
Check for -webkit-column-break-* in column layout R=me
mitz
Comment 3
2010-06-12 13:05:58 PDT
Fixed in <
http://trac.webkit.org/changeset/61065
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug