<rdar://problem/7882140> -webkit-column-break-* properties don’t do anything https://bugs.webkit.org/show_bug.cgi?id=40531

Reviewed by Dave Hyatt.

WebCore:

Test: fast/multicol/break-properties.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paintChildren): Check for -webkit-column-break-{before,after}: always
and -webkit-column-break-inside: avoid when doing column layout.

LayoutTests:

* fast/multicol/break-properties-expected.txt: Added.
* fast/multicol/break-properties.html: Added.



Canonical link: https://commits.webkit.org/52080@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61065 268f45cc-cd09-0410-ab3c-d52691b4dbfc